<resources>
    <string name="app_name">git api</string>
    <string name="unexpected_error">Ocorreu um erro inesperado.</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="github_api">Github Api</string>
    <string name="ex_nickname">Ex: NickName</string>
    <string name="user_not_found">usuario não encontrado</string>
    <string name="forbidden">Limite de pesquisas atingido, tente novamente em alguns minutos.</string>
    <string name="repo_info">Informações</string>
    <string name="lbl_desc">Descrição:</string>
    <string name="txt_desc">TextView</string>
    <string name="desc_img_git">Clique no botão acima para abrir no github</string>
    <string name="_0">0</string>
    <string name="internet_required">Conexão necessária para uso da aplicação</string>
    <string name="ir_para_o_github">Ir para o Github</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>